src/passes/snapshots/lumina2__passes__thir_gen__test__assign.snap
---
source: src/passes/thir_gen.rs
expression: "Assign { variable: ExpressionId(0), value: ExpressionId(0) }"
---
[
    (
        TypeVarId(
            4,
        ),
        Eq(
            TypeVarId(
                4,
            ),
        ),
    ),
    (
        TypeVarId(
            0,
        ),
        Eq(
            TypeVarId(
                1,
            ),
        ),
    ),
    (
        TypeVarId(
            4,
        ),
        Aggregate(
            0,
        ),
    ),
    (
        TypeVarId(
            4,
        ),
        Aggregate(
            0,
        ),
    ),
]
