src/passes/snapshots/lumina2__passes__thir_gen__test__equal.snap
---
source: src/passes/thir_gen.rs
expression: "Binary { lhs: ExprId(0), op: Equal(EqEq), rhs: ExprId(0) }"
---
[
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Type(
                Unit,
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Type(
                Unit,
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                0,
            ),
        ),
        Eq(
            Expr(
                ExprId(
                    0,
                ),
            ),
        ),
    ),
    (
        Expr(
            ExprId(
                1,
            ),
        ),
        Eq(
            Type(
                Boolean,
            ),
        ),
    ),
]
