src/passes/snapshots/lumina2__passes__thir_gen__test__expression_statement.snap
---
source: src/passes/thir_gen.rs
expression: "*pass.constraints"
---
[
    (
        TypeVarId(
            0,
        ),
        Integer(
            Any,
        ),
    ),
    (
        TypeVarId(
            4,
        ),
        Aggregate(
            [],
        ),
    ),
]
