src/passes/snapshots/lumina2__passes__thir_gen__test__greater.snap
---
source: src/passes/thir_gen.rs
expression: "Binary { lhs: ExpressionId(0), operation: Greater(RAngle), rhs: ExpressionId(0) }"
---
[
    (
        Expression(
            ExpressionId(
                0,
            ),
        ),
        Eq(
            Type(
                Unit,
            ),
        ),
    ),
    (
        Expression(
            ExpressionId(
                0,
            ),
        ),
        Eq(
            Type(
                Unit,
            ),
        ),
    ),
    (
        Expression(
            ExpressionId(
                0,
            ),
        ),
        Eq(
            Expression(
                ExpressionId(
                    0,
                ),
            ),
        ),
    ),
    (
        Expression(
            ExpressionId(
                0,
            ),
        ),
        Integer(
            Any,
        ),
    ),
    (
        Expression(
            ExpressionId(
                0,
            ),
        ),
        Integer(
            Any,
        ),
    ),
    (
        Expression(
            ExpressionId(
                1,
            ),
        ),
        Eq(
            Type(
                Boolean,
            ),
        ),
    ),
]
