src/passes/snapshots/lumina2__passes__thir_gen__test__inferred.snap
---
source: src/passes/thir_gen.rs
expression: Inferred(ExpressionId(0))
---
[
    (
        Binding(
            BindingId(
                0,
            ),
        ),
        Eq(
            Expression(
                ExpressionId(
                    0,
                ),
            ),
        ),
    ),
    (
        Expression(
            ExpressionId(
                0,
            ),
        ),
        Eq(
            Type(
                TypeId(
                    0,
                ),
            ),
        ),
    ),
]
