src/passes/snapshots/lumina2__passes__thir_gen__test__logical and.snap
---
source: src/passes/thir_gen.rs
expression: "Binary { lhs: ExpressionId(0), operation: LogicalAnd, rhs: ExpressionId(0) }"
---
[
    (
        TypeVarId(
            4,
        ),
        Aggregate(
            [],
        ),
    ),
    (
        TypeVarId(
            4,
        ),
        Aggregate(
            [],
        ),
    ),
    (
        TypeVarId(
            4,
        ),
        Eq(
            TypeVarId(
                2,
            ),
        ),
    ),
    (
        TypeVarId(
            4,
        ),
        Eq(
            TypeVarId(
                2,
            ),
        ),
    ),
    (
        TypeVarId(
            0,
        ),
        Eq(
            TypeVarId(
                2,
            ),
        ),
    ),
]
