src/passes/snapshots/lumina2__passes__thir_gen__test__negative.snap
---
source: src/passes/thir_gen.rs
expression: "Unary { operation: Negative, value: ExpressionId(0) }"
---
[
    (
        TypeVarId(
            4,
        ),
        Aggregate(
            [],
        ),
    ),
    (
        TypeVarId(
            0,
        ),
        Eq(
            TypeVarId(
                4,
            ),
        ),
    ),
    (
        TypeVarId(
            4,
        ),
        Integer(
            Signed,
        ),
    ),
]
