src/passes/snapshots/lumina2__passes__thir_gen__test__parameters.snap
---
source: src/passes/thir_gen.rs
expression: "[(BindingId(1), TypeId(2)), (BindingId(2), TypeId(4))] => TypeId(4)"
---
[
    (
        TypeVarId(
            0,
        ),
        Eq(
            TypeVarId(
                1,
            ),
        ),
    ),
]
