src/passes/snapshots/lumina2__passes__thir_gen__test__return int.snap
---
source: src/passes/thir_gen.rs
expression: "[] => I8"
---
[
    (
        Binding(
            BindingId(
                0,
            ),
        ),
        Eq(
            Type(
                Function {
                    params: [],
                    ret_ty: I8,
                },
            ),
        ),
    ),
]
